objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Contact_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Contact UUID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Country__c</fullName>
        <label>Home Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Home_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>